<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.application.don.karaokesearch.Activity.SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/textColorPrimary">

        <info.hoang8f.android.segmented.SegmentedGroup
            android:id="@+id/segmented2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@color/textColorPrimary"
            android:checkedButton="@+id/rdTenBaiHat"
            android:orientation="horizontal"
            segmentedgroup:sc_border_width="2dp"
            segmentedgroup:sc_checked_text_color="@color/textColorPrimary"
            segmentedgroup:sc_corner_radius="5dp"
            segmentedgroup:sc_tint_color="@color/colorPrimary">


            <RadioButton
                android:id="@+id/rbtSongName"
                style="@style/RadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/song_name"
                android:textSize="15sp"/>

            <RadioButton
                android:id="@+id/rbtLyric"
                style="@style/RadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/lyric"
                android:textSize="15sp"/>

            <RadioButton
                android:id="@+id/rbtSinger"
                style="@style/RadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/singer"
                android:textSize="15sp"/>

            <RadioButton
                android:id="@+id/rbtShortName"
                style="@style/RadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/short_name"
                android:textSize="15sp"/>
        </info.hoang8f.android.segmented.SegmentedGroup>
    </LinearLayout>

    <ListView
        android:id="@+id/lsvSearchSongs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:divider="@drawable/divider"/>

    <TextView
        android:id="@+id/emptyElement"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_data"/>

</LinearLayout>
