<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/textColorPrimary"
    tools:context="com.application.don.karaokesearch.Activity.SongDetailActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:text="1234567"
        android:id="@+id/txtCode"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/song_name"
            android:id="@+id/textView"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Chắc ai đó sẽ về"
            android:id="@+id/txtSongName"
            android:textSize="15sp"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/singer"
            android:id="@+id/textView3"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sơn Tùng MTP"
            android:id="@+id/txtSinger"
            android:textSize="15sp"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/karaoke_player"
            android:id="@+id/textView5"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Arirang"
            android:id="@+id/txtKaraokePlayer"
            android:textSize="15sp"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/volume"
            android:id="@+id/textView7"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="57"
            android:id="@+id/txtVolume"
            android:textSize="15sp"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/lyric"
            android:id="@+id/textView9"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Anh tìm nỗi nhớ, anh tìm quá khứ..."
            android:id="@+id/txtLyric"
            android:textSize="15sp"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/favorite"
            android:id="@+id/textView11"
            android:textSize="15sp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/cbxFav"
            android:layout_gravity="center"
            android:button="@drawable/ic_check_favorite"
            android:focusable="false"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/try_listening"
        android:background="@color/colorPrimary"
        android:textColor="@color/textColorPrimary"
        android:id="@+id/btnTryListening"/>
</LinearLayout>
